M2.1 - Added some margin to all sections with max width of 1400px to fix some overflow issues

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -6,9 +6,12 @@
         height: 83vh;
         margin-bottom: 6rem;;
     }
-
     .about-containers {
         flex-wrap: wrap;
+    }
+
+    section {
+        margin: 10px;;
     }
 }
 
@@ -55,8 +58,8 @@
     .about-containers {
         margin-top: 0;
     }
-}
 
+}
 /* Adjusting layout for screens with a maximum width of 600px */
 @media screen and (max-width: 600px) {
 
@@ -80,7 +83,7 @@
 
     .about-containers, 
     .contact-info-upper-container, 
-    btn-container {
+    .btn-container {
         flex-wrap: wrap;
     }
     
@@ -91,6 +94,7 @@
     .contact-info-container p, 
     .nav-links li a {
         font-size: 1rem;
+        padding: 0.5rem;
     }
 
     .experience-sub-title {
